--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script type="text/javascript">
             //My api key
             var apikey = {
-                key: 'b1f882ac-c206-4f87-849c-bc0cfb945daa'
+                key: 'API Code'
             }
 
             //GET Fetch Requisition
